tests/invalid/coerce_void.err_exp
coerce_void.m:019: In clause for predicate `main'/2:
coerce_void.m:019:   error: the type of [38;5;87m`V_8'[39;49m is [38;5;203munresolved;[39;49m cannot coerce from
coerce_void.m:019:   `list.list(V_2)' to `list.list(V_1)'.
